user offer list
